--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -18,6 +18,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@eslint/js": "^9.31.0",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.15",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
@@ -27,5 +28,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0"
   }
 }
