--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "rm -rf dist && tsc",
     "start": "node ./dist/index.js",
-    "build": "tsc",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier . --write",
