--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -20,6 +20,8 @@
     "@eslint/js": "^9.31.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.15",
+    "@types/pg": "^8.15.4",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.3.0",
@@ -31,6 +33,8 @@
   },
   "dependencies": {
     "dotenv": "^17.2.0",
-    "express": "^5.1.0"
+    "drizzle-orm": "^0.44.3",
+    "express": "^5.1.0",
+    "pg": "^8.16.3"
   }
 }
