feat(auth): configure drizzle-kit and generate initial migration

--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier . --write",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "ts-node ./src/db/migrate.ts",
+    "db": "pnpm db:generate; pnpm db:migrate",
+    "db:studio": "pnpm drizzle-kit studio --port 6969 --verbose",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
