--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "redis": "^5.6.0"
   }
 }
