--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -40,6 +40,7 @@
     "drizzle-orm": "^0.44.3",
     "express": "^5.1.0",
     "pg": "^8.16.3",
-    "redis": "^5.6.0"
+    "redis": "^5.6.0",
+    "winston": "^3.17.0"
   }
 }
