--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -41,6 +41,7 @@
     "express": "^5.1.0",
     "pg": "^8.16.3",
     "redis": "^5.6.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^4.0.5"
   }
 }
