--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -36,12 +36,14 @@
     "typescript-eslint": "^8.37.0"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "pg": "^8.16.3",
     "redis": "^5.6.0",
     "winston": "^3.17.0",
-    "zod": "^4.0.5"
+    "zod": "^3.25.75"
   }
 }
